chore(EID-3777) : refactor tests